# agama

./: .editorconfig  .gitignore  .gitmodules  .rubocop.yml  .yupdate.post  .yupdate.pre  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  IMAGE.md  PACKAGING.md  PULL_REQUEST_TEMPLATE.md  README.md  Rakefile  SECURITY.md  STATUS.md  THEMES.md  THEME_EXAMPLE.md  deploy.sh  package-lock.json  profile_integration_test.rb  rust-test  setup-dbus-activation.sh  setup-service.sh  setup-services.sh  setup-web.sh  setup.sh  testing_using_container.sh
rust/: .gitignore  Cargo.toml  GEMINI.md  README.md  WEB-SERVER.md  build_pot  data.json  install.sh  rust-test.rs
rust/agama-access/: Cargo.toml
rust/agama-access/src/: lib.rs  message.rs  service.rs  test_utils.rs
rust/agama-auto/: Cargo.toml
rust/agama-auto/src/: cmdline.rs  lib.rs  main.rs  runner.rs
rust/agama-autoinstall/: Cargo.toml
rust/agama-autoinstall/src/: auto_loader.rs  cmdline.rs  config.rs  kernel_cmdline.rs  lib.rs  loader.rs  main.rs  questions.rs  scripts.rs
rust/agama-bootloader/: Cargo.toml
rust/agama-bootloader/src/: client.rs  dbus.rs  lib.rs  message.rs  service.rs  test_utils.rs
rust/agama-cli/: Cargo.toml  PLAN.md  build.rs
rust/agama-cli/doc/: CLI_API.md  backend-for-testing.md
rust/agama-cli/src/: auth.rs  auth_tokens_file.rs  cli_input.rs  cli_output.rs  cli_strings.rs  commands.rs  config.rs  error.rs  events.rs  hosts.rs  lib.rs  logs.rs  main.rs  monitor.rs  printers.rs  profile.rs  progress.rs  questions.rs  questions_tui.rs  questions_ui.rs  server.rs  status.rs  translate.rs
rust/agama-cli/tests/: hosts.json  tokens.json
rust/agama-dbus-server/: Cargo.toml
rust/agama-dbus-server/share/: server-example.yaml
rust/agama-dbus-server/src/: agama-dbus-server.rs  agama-web-server.rs  error.rs  keyboard.rs  l10n.rs  lib.rs  locale.rs  main.rs  manager.rs  network.rs  questions.rs  server.rs  web.rs  ws.rs
rust/agama-dbus-server/tests/: l10n.rs  locale.rs  network.rs  service.rs
rust/agama-derive/: Cargo.toml
rust/agama-derive/src/: lib.rs
rust/agama-files/: Cargo.toml
rust/agama-files/src/: lib.rs  message.rs  runner.rs  service.rs
rust/agama-hostname/: Cargo.toml
rust/agama-hostname/src/: dbus.rs  lib.rs  message.rs  model.rs  monitor.rs  service.rs  test_utils.rs
rust/agama-iscsi/: Cargo.toml
rust/agama-iscsi/src/: client.rs  dbus.rs  lib.rs  message.rs  monitor.rs  service.rs  test_utils.rs
rust/agama-l10n/: Cargo.toml
rust/agama-l10n/src/: actions.rs  agent.rs  config.rs  dbus.rs  error.rs  event.rs  extended_config.rs  handler.rs  helpers.rs  info.rs  l10n.rs  lib.rs  message.rs  messages.rs  model.rs  monitor.rs  proposal.rs  service.rs  start.rs  system_info.rs  test_utils.rs  user_config.rs
rust/agama-lib/: Cargo.toml
rust/agama-lib/share/: README-weird-filenames.md  README.md  dasd.schema.json  iscsi.schema.json  network.schema.json  package-lock.json  package.json  profile.schema.json  software.schema.json  storage.model.schema.json  storage.schema.json  zfcp.schema.json
rust/agama-lib/src/: auth.rs  base_http_client.rs  bootloader.rs  config.rs  context.rs  dbus.rs  error.rs  file_source.rs  files.rs  hostname.rs  http.rs  http_client.rs  install_settings.rs  issue.rs  jobs.rs  lib.rs  locale.rs  localization.rs  logs.rs  manager.rs  monitor.rs  network.rs  openapi.rs  product.rs  profile.rs  progress.rs  proxies.rs  questions.rs  scripts.rs  security.rs  settings.rs  software.rs  storage.rs  store.rs  transfer.rs  url.rs  users.rs  utils.rs
rust/agama-locale-data/: Cargo.toml
rust/agama-locale-data/src/: deprecated_timezones.rs  error.rs  keyboard.rs  language.rs  lib.rs  locale.rs  localization.rs  ranked.rs  territory.rs  timezone_part.rs  xkeyboard.rs
rust/agama-logs/: Cargo.toml
rust/agama-logs/src/: main.rs
rust/agama-manager/: Cargo.toml
rust/agama-manager/src/: actions.rs  checks.rs  hardware.rs  lib.rs  listener.rs  message.rs  proposal.rs  scope.rs  service.rs  start.rs  system_info.rs  task_manager.rs  tasks.rs  test_utils.rs
rust/agama-network/: Cargo.toml
rust/agama-network-tui/: Cargo.toml  README.md
rust/agama-network-tui/src/: main.rs
rust/agama-network/src/: action.rs  adapter.rs  dbus.rs  (+14 more)
rust/agama-ntp/: Cargo.toml
rust/agama-proxy/: Cargo.toml
rust/agama-remote/: Cargo.toml
rust/agama-s390/: Cargo.toml
rust/agama-security/: Cargo.toml
rust/agama-server/: Cargo.toml  tasks.md
rust/agama-settings/: Cargo.toml
rust/agama-software/: Cargo.toml
rust/agama-storage/: Cargo.toml
rust/agama-storage-client/: Cargo.toml
rust/agama-transfer/: Cargo.toml
rust/agama-tui/: Cargo.toml  README.md
rust/agama-users/: Cargo.toml
rust/agama-utils/: Cargo.toml
rust/libzypp/: .gitmodules  Cargo.toml  Gir.toml  README.md  setup_env.sh
rust/package/: _constraints  _service  agama-cli.changes  agama-cli.spec  agama.changes  agama.spec
rust/po/: Makefile  af.po  bg.po  cs.po  de.po  el.po  es.po  fi.po  fr.po  id.po  it.po  ja.po  ka.po  nl.po  pt_BR.po  ro.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
rust/share/: agama-autoinstall.service  agama-journal  agama-proxy-setup.service  agama-scripts.pre  agama-scripts.service  agama-scripts.sh  agama-web-server-local.service  agama-web-server-remote.service  agama-web-server.service  agama-web-server.sh  agama-zypp-journal  agama.libsonnet  agama.pam  dasd.schema.json  dbus-test.conf  device.storage.schema.json  iscsi.schema.json  localectl-list-keymaps.txt  localectl-list-locales.txt  localectl.txt  org.opensuse.Agama.Locale1.service  org.opensuse.Agama.Network1.service  org.opensuse.Agama.Questions1.service  org.opensuse.Agama1.service  profile.schema.json  proposal.storage.schema.json  software.schema.json  storage.model.schema.json  storage.schema.json  system.bootloader.schema.json  system.dasd.schema.json  system.iscsi.schema.json  system.storage.schema.json  system.zfcp.schema.json  zfcp.schema.json
rust/suseconnect-agama/: Cargo.toml
rust/tui-bond-config/: Cargo.toml
rust/xtask/: Cargo.toml  README.md
rust/zypp-agama/: Cargo.toml  README.md
(+4519 files in other folders)
