[workspace]
members = [
    "agama-autoinstall",
    "agama-cli",
    "agama-files",
    "agama-hostname",
    "agama-l10n",
    "agama-lib",
    "agama-locale-data",
    "agama-manager",
    "agama-network",
    "agama-security",
    "agama-server",
    "agama-software",
    "agama-storage",
    "agama-transfer",
    "agama-utils",
    "agama-users",
    "suseconnect-agama",
    "suseconnect-agama/suseconnect-agama-sys",
    "xtask",
    "zypp-agama",
    "zypp-agama/zypp-agama-sys", "agama-iscsi",
]
resolver = "2"

[workspace.package]
# required by zbus 5
rust-version = "1.81"
edition = "2021"
