[workspace]
members = [
    "agama-autoinstall",
    "agama-cli",
    "agama-files",
    "agama-hostname",
    "agama-iscsi",
    "agama-l10n",
    "agama-lib",
    "agama-locale-data",
    "agama-manager",
    "agama-proxy",
    "agama-network",
    "agama-ntp",
    "agama-access",
    "agama-s390",
    "agama-security",
    "agama-server",
    "agama-software",
    "agama-storage",
    "agama-storage-client",
    "agama-transfer",
    "agama-utils",
    "agama-users",
    "suseconnect-agama",
    "suseconnect-agama/suseconnect-agama-sys",
    "xtask",
    "zypp-agama",
    "zypp-agama/zypp-agama-sys"
]
resolver = "2"

[workspace.package]
rust-version = "1.88"
edition = "2021"

[workspace.dependencies]
agama-access = { path = "agama-access" }
agama-l10n = { path = "agama-l10n" }
agama-lib = { path = "agama-lib" }
agama-locale-data = { path = "agama-locale-data" }
agama-network = { path = "agama-network" }
agama-security = { path = "agama-security" }
agama-software = { path = "agama-software" }
agama-storage-client = { path = "agama-storage-client" }
agama-transfer = { path = "agama-transfer" }
agama-utils = { path = "agama-utils" }
anyhow = { version = "1.0.100" }
async-trait = { version = "0.1.89" }
bindgen = { version = "0.72.1", features = ["runtime"] }
camino = { version = "1.2.1" }
chrono = { version = "0.4.38", features = ["alloc", "clock", "now", "std"] }
cidr = { version = "0.3.1", features = ["serde"] }
clap = { version = "4.5.19", features = ["derive", "wrap_help"] }
fluent-uri = { version = "0.4.1", features = ["serde"] }
futures-util = { version = "0.3.30", features = ["alloc"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
glob = { version = "0.3.1" }
home = { version = "0.5.11" }
i18n-format = { version = "0.4.0" }
macaddr = { version = "1.0.1", features = ["serde_std"] }
merge = { version = "0.2.0", features = ["std"] }
openssl = { version = "0.10.75" }
pin-project = { version = "1.1.10" }
regex = { version = "1.12.2" }
schemars = { version = "1.2.1", features = ["url2", "uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
serde_with = { version = "3.16.1" }
serde_yaml = { version = "0.9.34" }
strum = { version = "0.27.2", features = ["derive"] }
tempfile = { version = "3.27.0" }
test-context = { version = "0.4.1" }
thiserror = { version = "2.0.18" }
tokio = { version = "1.52.1", features = ["full", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17" }
tokio-test = { version = "0.4.4" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
zbus = { version = "5.12.0", features = ["tokio"] }
zypp-agama = { path = "zypp-agama" }
