[package]
name = "agama-autoinstall"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-l10n = { path = "../agama-l10n" }
agama-lib = { path = "../agama-lib" }
agama-utils = { path = "../agama-utils" }
agama-transfer = { path = "../agama-transfer" }
anyhow = { version = "1.0.100" }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
i18n-format = "0.4.0"
tempfile = "3.27.0"
tokio = "1.52.1"
tracing = "0.1.44"
url = "2.5.7"
