[package]
name = "agama-autoinstall"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-l10n = { workspace = true }
agama-lib = { workspace = true }
agama-transfer = { workspace = true }
agama-utils = { workspace = true }
anyhow = { workspace = true }
gettext-rs = { workspace = true }
i18n-format = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
