[package]
name = "agama-cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.19", features = ["derive", "wrap_help"] }
agama-l10n = { path = "../agama-l10n" }
agama-lib = { path = "../agama-lib" }
agama-utils = { path = "../agama-utils" }
agama-transfer = { path = "../agama-transfer" }
serde_json = "1.0.128"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
thiserror = "2.0.12"
console = "0.15.8"
anyhow = "1.0.89"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.2"
inquire = { version = "0.9.4", default-features = false, features = [
    "crossterm",
    "one-liners",
] }
chrono = "0.4.38"
regex = "1.11.1"
home = "0.5.11"
fluent-uri = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
i18n-format = "0.4.0"

[[bin]]
name = "agama"
path = "src/main.rs"
