[package]
name = "agama-cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agama-l10n = { workspace = true }
agama-lib = { workspace = true }
agama-transfer = { workspace = true }
agama-utils = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console = "0.15.8"
crossterm = { version = "0.29", features = ["event-stream"] }
fluent-uri = { workspace = true }
futures-util = { workspace = true }
gettext-rs = { workspace = true }
home = { workspace = true }
i18n-format = { workspace = true }
inquire = { version = "0.9.4", default-features = false, features = ["crossterm", "one-liners",] }
ratatui = "0.30"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[[bin]]
name = "agama"
path = "src/main.rs"
