[package]
name = "agama-dbus-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
agama-locale-data = { path="../agama-locale-data" }
agama-lib = { path="../agama-lib" }
log = "0.4"
simplelog = "0.12.1"
systemd-journal-logger = "1.0"
zbus = { version = "3.7.0", default-features = false, features = ["tokio", "uuid"] }
zbus_macros = "3.7.0"
uuid = { version = "1.3.4", features = ["v4"] }
thiserror = "1.0.40"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.24"
futures = "0.3.28"
cidr = { version = "0.2.2", features = ["serde"] }
tokio = { version = "1.33.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
