[package]
name = "agama-files"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-software = { version = "0.1.0", path = "../agama-software" }
agama-utils = { path = "../agama-utils" }
async-trait = "0.1.89"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
tokio-test = "0.4.4"
test-context = "0.4.1"
serde_json = "1.0.145"
