[package]
name = "agama-files"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { path = "../agama-utils" }
async-trait = "0.1.89"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
strum = "0.27.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.41"

[dev-dependencies]
agama-l10n = { path = "../agama-l10n" }
tokio-test = "0.4.4"
test-context = "0.4.1"
serde_json = "1.0.145"
