[package]
name = "agama-files"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { workspace = true }
async-trait = { workspace = true }
gettext-rs = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
agama-l10n = { workspace = true }
serde_json = { workspace = true }
test-context = { workspace = true }
tokio-test = { workspace = true }
