[package]
name = "agama-hostname"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { version = "0.1.0", path = "../agama-utils" }
anyhow = "1.0.100"
async-trait = "0.1.89"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
tokio-test = "0.4.4"
tracing = "0.1.43"
zbus = "5.12.0"

[dev-dependencies]
tempfile = "3.23.0"
test-context = "0.4.1"
