[package]
name = "agama-hostname"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { version = "0.1.0", path = "../agama-utils" }
anyhow = "1.0.100"
async-trait = "0.1.89"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
tracing = "0.1.44"
zbus = "5.12.0"

[dev-dependencies]
tempfile = "3.27.0"
test-context = "0.4.1"
