[package]
name = "agama-hostname"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-context = { workspace = true }
