[package]
name = "agama-iscsi"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { path = "../agama-utils" }
thiserror = "2.0.16"
async-trait = "0.1.89"
zbus = "5.7.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.16"
serde = { version = "1.0.228" }
serde_json = "1.0.140"
