[package]
name = "agama-iscsi"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-storage-client = { workspace = true }
agama-utils = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
test-context = { workspace = true }
tokio-test = { workspace = true }
