[package]
name = "agama-l10n"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-locale-data = { workspace = true }
agama-utils = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
gettext-rs = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
test-context = { workspace = true }
tokio-test = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }
