[package]
name = "agama-lib"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.83"
cidr = { version = "0.2.3", features = ["serde"] }
futures-util = "0.3.30"
jsonschema = { version = "0.16.1", default-features = false, features = ["resolve-file"] }
log = "0.4"
reqwest = { version = "0.12.8", features = ["json", "cookies"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["raw_value"] }
serde_repr = "0.1.19"
tempfile = "3.13.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.16"
url = "2.5.2"
utoipa = "4.2.3"
zbus = { version = "3", default-features = false, features = ["tokio"] }
# Needed to define curl error in profile errors
curl = { version = "0.4.47", features = ["protocol-ftp"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", default-features = false, features = ["now", "std", "alloc", "clock"] }
home = "0.5.9"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
httpmock = "0.7.0"
env_logger = "0.11.5"
