[package]
name = "agama-lib"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
agama-utils = { path = "../agama-utils" }
agama-network = { path = "../agama-network" }
agama-locale-data = { path = "../agama-locale-data" }
agama-l10n = { path = "../agama-l10n" }
agama-transfer = { path = "../agama-transfer" }
async-trait = "0.1.83"
futures-util = "0.3.30"
jsonschema = { version = "0.30.0", default-features = false, features = [
    "resolve-file",
] }
log = "0.4"
reqwest = { version = "0.12.8", features = ["json", "cookies"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["raw_value"] }
serde_repr = "0.1.19"
tempfile = "3.13.0"
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = "0.1.16"
url = { version = "2.5.2", features = ["serde"] }
utoipa = { version = "5.2.0", features = ["url"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
# Needed to define curl error in profile errors
curl = { version = "0.4.47", features = ["protocol-ftp"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", default-features = false, features = [
    "now",
    "std",
    "alloc",
    "clock",
] }
home = "0.5.9"
strum = { version = "0.27.1", features = ["derive"] }
fs_extra = "1.3.0"
serde_with = "3.12.0"
regex = "1.11.1"
fluent-uri = { version = "0.3.2", features = ["serde"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio-native-tls = "0.3.1"
percent-encoding = "2.3.1"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
zypp-agama = { path = "../zypp-agama" }

[dev-dependencies]
httpmock = "0.7.0"
env_logger = "0.11.5"
