[package]
name = "agama-lib"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agama-transfer = { workspace = true }
agama-utils = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
fluent-uri = { workspace = true }
fs_extra = "1.3.0"
home = { workspace = true }
jsonschema = { version = "0.30.0", default-features = false, features = ["resolve-file",] }
jsonwebtoken = "9.3.0"
log = "0.4"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "native-tls"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = "0.6"
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-native-tls = "0.3.1"
tokio-stream = { workspace = true }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zbus = { workspace = true }
zypp-agama = { workspace = true }

[dev-dependencies]
env_logger = "0.11.5"
httpmock = "0.8.3"
