[package]
name = "agama-locale-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.210", features = ["derive"] }
quick-xml = { version = "0.28.2", features = ["serialize"] }
flate2 = "1.0.34"
chrono-tz = "0.8.6"
regex = "1"
thiserror = "1.0.64"
utoipa = "5.2.0"
