[package]
name = "agama-locale-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
quick-xml = { version = "0.37.5", features = ["serialize"] }
flate2 = "1.0.34"
chrono-tz = "0.10.3"
regex = "1"
thiserror = "2.0.12"
utoipa = "5.2.0"
