[package]
name = "agama-locale-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = "0.10.3"
flate2 = "1.0.34"
quick-xml = { version = "0.37.5", features = ["serialize"] }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
