[package]
name = "agama-logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "0.3"
fs_extra = "1.3.0"
nix = { version = "0.27.1", features = ["user"] }

[[bin]]
name = "agama-logs"
path = "src/main.rs"
