[package]
name = "agama-manager"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-files = { path = "../agama-files" }
agama-l10n = { path = "../agama-l10n" }
agama-network = { path = "../agama-network" }
agama-software = { path = "../agama-software" }
agama-storage = { path = "../agama-storage" }
agama-utils = { path = "../agama-utils" }
thiserror = "2.0.12"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync"] }
async-trait = "0.1.83"
zbus = { version = "5", default-features = false, features = ["tokio"] }
merge-struct = "0.1.0"
serde_json = "1.0.140"
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"

[dev-dependencies]
test-context = "0.4.1"
tokio-test = "0.4.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }
