[package]
name = "agama-manager"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-access = { workspace = true }
agama-bootloader = { path = "../agama-bootloader" }
agama-files = { path = "../agama-files" }
agama-hostname = { path = "../agama-hostname" }
agama-iscsi = { path = "../agama-iscsi" }
agama-l10n = { workspace = true }
agama-network = { workspace = true }
agama-ntp = { path = "../agama-ntp" }
agama-proxy = { version = "0.1.0", path = "../agama-proxy" }
agama-s390 = { path = "../agama-s390" }
agama-security = { workspace = true }
agama-software = { workspace = true }
agama-storage = { path = "../agama-storage" }
agama-users = { path = "../agama-users" }
agama-utils = { workspace = true }
async-trait = { workspace = true }
gettext-rs = { workspace = true }
merge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
test-context = { workspace = true }
tokio-test = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }
