[package]
name = "agama-network"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { path = "../agama-utils" }
anyhow = "1.0.98"
async-trait = "0.1.88"
cidr = { version = "0.3.1", features = ["serde"] }
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }
macaddr = { version = "1.0.1", features = ["serde_std"] }
pin-project = "1.1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-test = "0.4.4"
tracing = "0.1.41"
utoipa = { version = "5.3.1", features = ["uuid"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
semver = "1.0.26"
serde_json = "1.0.148"
