[package]
name = "agama-network"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { path = "../agama-utils", default-features = false }
anyhow = "1.0.100"
async-trait = "0.1.89"
cidr = { version = "0.3.1", features = ["serde"] }
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }
macaddr = { version = "1.0.1", features = ["serde_std"] }
pin-project = "1.1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"
tracing = "0.1.44"
schemars = { version = "1.2.1", features = ["uuid1"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
semver = "1.0.26"
gettext-rs = "0.7.7"
