[package]
name = "agama-network"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
cidr = { workspace = true }
futures-util = { workspace = true }
gettext-rs = { workspace = true }
macaddr = { workspace = true }
pin-project = { workspace = true }
schemars = { workspace = true }
semver = "1.0.26"
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zbus = { workspace = true }
