[package]
name = "agama-ntp"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { version = "0.1.0", path = "../agama-utils" }
async-trait = "0.1.89"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.44"

[dev-dependencies]
test-context = "0.4.1"
tempfile = "3.13.0"
