[package]
name = "agama-ntp"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { workspace = true }
async-trait = { workspace = true }
merge = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
agama-l10n = { workspace = true }
tempfile = { workspace = true }
test-context = { workspace = true }
