[package]
name = "agama-proxy"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
gettext-rs = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "agama-proxy-setup"
path = "src/main.rs"


[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
