[package]
name = "agama-s390"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { path = "../agama-utils" }
agama-storage-client = { path = "../agama-storage-client" }
thiserror = "2.0.18"
async-trait = "0.1.89"
zbus = "5.12.0"
tracing = "0.1.44"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.228" }
serde_json = "1.0.145"

[dev-dependencies]
test-context = "0.4.1"
tokio-test = "0.4.4"
