[package]
name = "agama-security"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { workspace = true }
async-trait = { workspace = true }
gettext-rs = { workspace = true }
openssl = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true }
