[package]
name = "agama-server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
agama-lib = { path = "../agama-lib" }
agama-utils = { path = "../agama-utils" }
agama-l10n = { path = "../agama-l10n" }
agama-locale-data = { path = "../agama-locale-data" }
agama-manager = { path = "../agama-manager" }
agama-software = { path = "../agama-software" }
agama-transfer = { path = "../agama-transfer" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
thiserror = "2.0.12"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.16"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["ws", "macros"] }
serde_json = "1.0.128"
tower-http = { version = "0.6.2", features = [
    "compression-br",
    "fs",
    "trace",
    "set-header",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-journald = "0.3.0"
tracing = "0.1.40"
clap = { version = "4.5.19", features = ["derive", "wrap_help"] }
tower = { version = "0.5.2", features = ["util"] }
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid"] }
config = "0.15.11"
rand = "0.9.1"
axum-extra = { version = "0.9.4", features = ["cookie", "typed-header"] }
# pam 0.8.0 (2023-11) plus an unreleased commit from 2023-12
# that switches from users to uzers, fixing CVE-2025-5791
pam = { git = "https://github.com/1wilkens/pam.git", rev = "daf26ae" }
pin-project = "1.1.5"
openssl = "0.10.66"
sd-notify = "0.4.2"
hyper = "1.4.1"
hyper-util = "0.1.9"
tokio-openssl = "0.6.5"
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }
libsystemd = "0.7.0"
gethostname = "1.0.0"
tokio-util = "0.7.12"
url = "2.5.2"

[[bin]]
name = "agama-web-server"
path = "src/agama-web-server.rs"

[dev-dependencies]
http-body-util = "0.1.2"
test-context = "0.4.1"
tokio-test = "0.4.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }

# here we force runtime for bindgen otherwise pam-sys fails
[build-dependencies]
bindgen = { version = "0.69", features = ["runtime"] }
