[package]
name = "agama-server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
agama-lib = { path = "../agama-lib" }
agama-utils = { path = "../agama-utils" }
agama-l10n = { path = "../agama-l10n" }
agama-locale-data = { path = "../agama-locale-data" }
agama-manager = { path = "../agama-manager" }
agama-network = { path = "../agama-network" }
agama-software = { path = "../agama-software" }
agama-transfer = { path = "../agama-transfer" }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws", "macros"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.2", features = [
    "compression-br",
    "fs",
    "trace",
    "set-header",
] }
tracing = "0.1.44"
clap = { version = "4.5.19", features = ["derive", "wrap_help"] }
tower = { version = "0.5.2", features = ["util"] }
aide = { version = "0.16.0-alpha.4", features = ["axum", "axum-extra", "axum-json", "axum-query", "macros"] }
indexmap = "2.7"
schemars = { version = "1.2.1", features = ["uuid1", "url2"] }
config = "0.15.11"
rand = "0.9.1"
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
# pam 0.8.0 (2023-11) plus an unreleased commit from 2023-12
# that switches from users to uzers, fixing CVE-2025-5791
pam = { git = "https://github.com/1wilkens/pam.git", rev = "daf26ae" }
pin-project = "1.1.10"
openssl = "0.10.75"
sd-notify = "0.4.2"
hyper = "1.4.1"
hyper-util = "0.1.9"
tokio-openssl = "0.6.5"
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }
gethostname = "1.0.0"
tokio-util = "0.7.12"
url = "2.5.7"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }

[[bin]]
name = "agama-web-server"
path = "src/agama-web-server.rs"

[dev-dependencies]
http-body-util = "0.1.2"
test-context = "0.4.1"
tokio-test = "0.4.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }

# here we force runtime for bindgen otherwise pam-sys fails.
# Also it intentionally force old version of bindgen, which is
# the exact one that is used for pam-sys ( it looks like unmaintained for some years )
[build-dependencies]
bindgen = { version = "0.69.5", features = ["runtime"] }
